k8s/deployment.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: my-tekapp
  namespace: my-tekapp
  labels:
    application: my-tekapp
spec:
  strategy:
    type: Rolling    
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    resources: {}
  selector:
    application: my-tekapp
    deploymentConfig: my-tekapp
  replicas: 1
  triggers:
    - type: ConfigChange
  template:
    metadata:
      labels:
        application: my-tekapp
        deploymentConfig: my-tekapp
      name: my-tekapp
    spec:
      containers:
        - name: my-tekapp
          image: <DOCKER_IMAGE>
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 9443
            initialDelaySeconds: 45
            periodSeconds: 45
            successThreshold: 1
            timeoutSeconds: 1
            failureThreshold: 3
          ports:
            - containerPort: 9080
              name: 9080-tcp
              protocol: TCP
            - containerPort: 9443
              name: 9443-tcp
              protocol: TCP
            - containerPort: 9082
              name: http
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 9443
            initialDelaySeconds: 90
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
            failureThreshold: 3
          securityContext:
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
      terminationGracePeriodSeconds: 60
      dnsPolicy: ClusterFirst
      serviceAccountName: kabanero-operator
      serviceAccount: kabanero-operator
      # securityContext:
      #   runAsUser: 1001
      #   runAsNonRoot: true
