k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-tekapp
  namespace: kabanero
  annotations:
    description: The web server's http port.
  labels:
    application: my-tekapp
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 3000
      protocol: TCP
    # - name: 443-tcp
    #   port: 443
    #   targetPort: 443
    #   protocol: TCP
    # - name: http
    #   port: 8081
    #   targetPort: 8081
    #   protocol: TCP
  selector:
    deploymentConfig: my-tekapp
  type: ClusterIP
  sessionAffinity: None
